[fx] Fix vec3 emitter properties clipping out of layout

--- a/bin/style.less
+++ b/bin/style.less
@@ -1210,6 +1210,11 @@ input[type=checkbox] {
 		content:"\25bc  ";
 	}
 
+	.flex > input {
+		flex: 1 1;
+		min-width: 0;
+	}
+
 	dl {
 		overflow-x:hidden;
 		margin:0px;
